--- a/batching-the-open-web-with-spring/batching-the-open-web-with-spring-batch-and-social.html
+++ b/batching-the-open-web-with-spring/batching-the-open-web-with-spring-batch-and-social.html
@@ -348,8 +348,8 @@ login flow. </p>
 
            Let's look at some of the configuration involved.
 
-             Because Spring Batch is itself a framework with its own database state, the first thing we configure are
-           the
+             Because Spring Batch is itself a framework with its own database state, the first thing we configure
+           is  beans required to work with.
        </P>
 <OL>
     <LI>
