--- a/batching-the-open-web-with-spring/batching-the-open-web-with-spring-batch-and-social.html
+++ b/batching-the-open-web-with-spring/batching-the-open-web-with-spring-batch-and-social.html
@@ -311,9 +311,25 @@ login flow. </p>
     <CODE>Flickr</CODE> API implementation that we can use to drive our batch process.
     Spring Batch makes it very easy to describe complex workflows as a series of <CODE>step</CODE>s inside of a single
     <CODE>job</CODE>
-    using the Spring Batch Java DSL available in Spring Batch 2.2. Here's the configuration for our <CODE>flickrImportJob</CODE> job.
-</P>
+    using the Spring Batch Java DSL available in Spring Batch 2.2.
 
+    </P>
+<P>
+    To use Spring Batch, you need to configure a few things common to all Spring Batch jobs.
+
+    First, you  need to configure a database connection ( <CODE>javax.sql.DataSource</CODE>)
+    which in turn requires a few database tables that Spring Batch uses to handle the bookkeeping related to the state
+    of batch jobs. Since Spring Batch needs to handle transactions, you also need to create a <CODE>PlatformTransactionManager</CODE>
+    bean that can be used with the transactional resource (in this case, the <CODE>DataSource</CODE>). Finally, Spring Batch needs concurrency
+ The schema for these tables is presented below.
+
+</P>
+<div class="source" >
+     batch-importer/src/main/resources/batch_pg.sql
+</div>
+<P></P>
+
+<p> Here's the configuration for our <CODE>flickrImportJob</CODE> job.</p>
 <div class="source" start="1">batch-importer/src/main/java/org/springframework/social/importer/config/BatchImporterConfiguration.java</div>
 
 <P> The job defines three <CODE>step</CODE>s.
